# wasm-runtime

./: .gitignore  CMakeLists.txt  Makefile  Module.cpp  Module.h  ModuleParser.cpp  ModuleParser.h  bytecode.c  bytecode.cpp  bytecode.h  cmake_install.cmake  code.wat  common.h  main.c  main.cpp  refresh_compile_commands.sh  runtime.c  runtime.cpp  runtime.h  wasm_runtime
